--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "authentication": "file:",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "firebase": "^11.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
